--- a/kaddem/kaddem/jenkinsFile
+++ b/kaddem/kaddem/jenkinsFile
@@ -24,6 +24,7 @@ pipeline {
         }
         stage('Code Build') {
             steps {
+                sh 'cd kaddem/kaddem && mvn clean package -Dmaven.test.skip=true'
                 sh 'mvn install -Dmaven.test.skip=true'
             }
         }
