--- a/kaddem/kaddem/jenkinsFile
+++ b/kaddem/kaddem/jenkinsFile
@@ -33,9 +33,24 @@ pipeline {
                 '''
             }
         }
+        stage('Testing') {
+            steps {
+                sh '''
+                    # Navigate to the directory containing the pom.xml file
+                    cd kaddem/kaddem
+                    # Run unit tests
+                    mvn test
+                '''
+            }
+        }
         stage('SonarQube') {
             steps {
-                sh 'cd kaddem/kaddem && mvn sonar:sonar -Dsonar.token=squ_75ec5f123179a9c2f52a8d9c5ae0095c0fc883a6 -Dmaven.test.skip=true';
+                sh '''
+                    # Navigate to the directory containing the pom.xml file
+                    cd kaddem/kaddem
+                    # Run SonarQube analysis
+                    mvn sonar:sonar -Dsonar.token=squ_75ec5f123179a9c2f52a8d9c5ae0095c0fc883a6 -Dmaven.test.skip=true
+                '''
             }
         }
     }
