--- a/kaddem/kaddem/jenkinsFile
+++ b/kaddem/kaddem/jenkinsFile
@@ -66,7 +66,7 @@ pipeline {
                     # Navigate to the directory containing the pom.xml file
                     cd kaddem/kaddem
                     # Deploy the artifact to Nexus
-                    mvn deploy -Dmaven.test.skip=true
+                    mvn deploy 
                 '''
             }
         }
