--- a/kaddem/kaddem/jenkinsFile
+++ b/kaddem/kaddem/jenkinsFile
@@ -8,7 +8,8 @@ pipeline {
     }
     environment {
         APP_ENV = "DEV"
-        NEXUS_REPO_URL = "http://<nexus-host>:8081/repository/spring-releases/"  // Replace with your Nexus repository URL
+        NEXUS_REPO_URL = "http://127.0.0.1:8081/repository/spring-releases/"  // Replace with your Nexus repository URL
+        MAVEN_SETTINGS = "/usr/share/maven/conf/settings.xml"  // Use a managed settings.xml file in Jenkins
     }
     stages {
         stage('Checkout Code') {
@@ -29,8 +30,7 @@ pipeline {
                     # Navigate to the directory containing the pom.xml file
                     cd kaddem/kaddem
                     # Run Maven commands
-                    mvn clean package -Dmaven.test.skip=true
-                    mvn install -Dmaven.test.skip=true
+                    mvn clean install -DskipTests
                 '''
             }
         }
@@ -56,7 +56,7 @@ pipeline {
                     # Navigate to the directory containing the pom.xml file
                     cd kaddem/kaddem
                     # Run SonarQube analysis
-                    mvn sonar:sonar -Dsonar.token=squ_75ec5f123179a9c2f52a8d9c5ae0095c0fc883a6 -Dmaven.test.skip=true
+                    mvn sonar:sonar -Dsonar.token=squ_75ec5f123179a9c2f52a8d9c5ae0095c0fc883a6 -DskipTests
                 '''
             }
         }
@@ -66,27 +66,32 @@ pipeline {
                     # Navigate to the directory containing the pom.xml file
                     cd kaddem/kaddem
                     # Deploy the artifact to Nexus
-                    mvn deploy --settings /usr/share/maven/conf/settings.xml -DskipTests
+                    mvn deploy --settings ${MAVEN_SETTINGS} -DskipTests
                 '''
             }
         }
-    }
-    stage('Docker Compose') {
+        stage('Docker Compose') {
             steps {
                 script {
-                    sh '''
-                        # Navigate to the directory containing docker-compose.yml
-                        cd kaddem/kaddem
-                        # Build Docker images
-                        docker-compose build
-                        # Start the containers in detached mode
-                        docker-compose up -d
-                        # Verify the containers are running
-                        docker-compose ps
-                    '''
+                    try {
+                        sh '''
+                            # Navigate to the directory containing docker-compose.yml
+                            cd kaddem/kaddem
+                            # Build Docker images
+                            docker-compose build
+                            # Start the containers in detached mode
+                            docker-compose up -d
+                            # Verify the containers are running
+                            docker-compose ps
+                        '''
+                    } catch (Exception e) {
+                        echo "Docker Compose failed: ${e.message}"
+                        throw e  // Rethrow the exception to fail the pipeline
+                    }
                 }
             }
         }
+    }
     post {
         always {
             echo "======always======"
