--- a/kaddem/kaddem/docker-compose.yml
+++ b/kaddem/kaddem/docker-compose.yml
@@ -1,23 +1,22 @@
-version: '3.8'
+version: "3.8"
 services:
-  app:
-    image: spring-app:latest
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "8089:8089"
-    environment:
-      - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/kaddem
-      - SPRING_DATASOURCE_USERNAME=root
-      - SPRING_DATASOURCE_PASSWORD=root
-    depends_on:
-      - db
-
-  db:
-    image: mysql:latest
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: kaddem
-    ports:
-      - "3306:3306"
+ app:
+  image: spring-app:latest
+  build:
+   context: .
+   dockerfile: Dockerfile
+  ports:
+   - "8089:8089"
+  environment:
+   - SPRING_DATASOURCE_URL=jdbc:mysql://localhost:3306/kaddem?&createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+   - SPRING_DATASOURCE_USERNAME=root
+   - SPRING_DATASOURCE_PASSWORD=root
+  depends_on:
+   - db
+ db:
+  image: mysql:latest
+  environment:
+   MYSQL_ROOT_PASSWORD: root
+   MYSQL_DATABASE: kaddem
+  ports:
+   - "3306:3306"
